--- a/app.json
+++ b/app.json
@@ -1,12 +1,12 @@
 {
   "expo": {
-    "name": "laundryAdmin",
-    "slug": "laundryAdmin",
+    "name": "Kotakbon Admin",
+    "slug": "KotakbonAdmin",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/iconKBA5.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splashKBA.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -20,6 +20,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.admin.kotakbonadmin",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
