--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
     "@react-native-community/datetimepicker": "^3.1.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/material-bottom-tabs": "^5.3.14",
+    "@react-navigation/material-top-tabs": "^5.3.14",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@supabase/supabase-js": "^1.17.0",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "^8.2.10",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-flash-message": "^0.1.23",
     "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-pager-view": "^5.4.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-paper": "^0.0.2",
